--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,23 @@
 version: '3.7'
 
 services:
-
-  genui:
+  ui:
     image: node:13.12.0-alpine
-    container_name: genui
-    build:
-      context: ./client
+    working_dir: /app
     volumes:
       - ./client:/app
-      - /app/node_modules
     command: npm start
     ports:
-      - 3001:3000
-    depends_on:
-      - genapi
+      - 3000:3000
+    links:
+      - server
     stdin_open: true
 
-  genapi:
-    container_name: genapi
-    build:
-      context: ./server
+  server:
+    image: node:13.12.0-alpine
+    working_dir: /app
     volumes:
       - ./server:/app
-      - /app/node_modules
     command: npm start
     environment:
       - NODE_ENV=development
