--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,20 +1,22 @@
 # pull official base image
-FROM node:13.12.0-alpine
+FROM node:10-alpine
 
 # set working directory
+RUN npm install -g yarn
+# set working directory
+RUN mkdir /app
 WORKDIR /app
+COPY . /app
+RUN yarn --pure-lockfile
 
 # add `/app/node_modules/.bin` to $PATH
+ENV NODE_PATH=/app/node_modules
 ENV PATH /app/node_modules/.bin:$PATH
 
-# install app dependencies
-COPY package.json .
-RUN npm install --silent
+RUN npm config set "strict-ssl" false && cd /app && npm install --silent
 
-# add app
-COPY . .
+WORKDIR /app
 
 EXPOSE 8080
-
 # start app
 CMD ["npm", "start"]
