--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,10 @@
   "proxy": "http://server:8080",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "docker:start": "node_modules/.bin/webpack-dev-server --host 0.0.0.0",
     "build": "NODE_ENV='production' webpack --mode production --config ./config/webpack.prod.js",
     "test": "jest --config jest.config.js --coverage --watchAll=false",
-    "test:watch": "jest --config jest.config.js --watch",
-    "test:update": "jest --config jest.config.js --updateSnapshot",
     "eslint": "eslint --ignore-path .eslintignore --ext .js './src/**/*.js'",
-    "eslintFix": "eslint --fix --ignore-path .eslintignore --ext .js './src/**/*.js'",
-    "plop": "plop"
+    "eslintFix": "eslint --fix --ignore-path .eslintignore --ext .js './src/**/*.js'"
   },
   "author": "",
   "license": "ISC",
@@ -25,11 +21,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.0"
   },
@@ -81,14 +74,14 @@
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
-    "stylelint": "^11.1.1",
+    "stylelint": "^13.6.0",
     "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "^7.0.2",
     "typescript": "^3.8.3",
     "url-loader": "^2.3.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
     "whatwg-fetch": "^3.0.0",
     "workbox-webpack-plugin": "^4.3.1"
