--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --config jest.config.js --coverage --watchAll=false",
-    "eslint": "eslint --ext .js '**/*.js'",
-    "eslintFix": "eslint --fix --ext .js '**/*.js'",
     "start": "nodemon src/bin/www"
   },
   "author": "",
@@ -18,18 +15,13 @@
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
     "morgan": "^1.10.0",
-    "socket.io": "^2.3.0",
-    "winston": "^3.2.1"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "husky": "^4.2.5",
-    "jest": "^26.0.0",
-    "lint-staged": "^10.2.2",
-    "nodemon": "^2.0.3",
-    "prettier": "^2.0.5",
-    "supertest": "^4.0.2"
+    "nodemon": "^2.0.3"
   }
 }
